dodałem możliwość renderowania treści w MD